buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
    }
}

plugins {
  id 'com.github.johnrengelman.shadow' version '5.1.0'
  id 'java'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'checkstyle'
apply plugin: 'jacoco'

sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets.main.java.srcDirs = ['src']
sourceSets.main.resources.srcDirs = ['res']
sourceSets.test.java.srcDirs = ['test']

checkstyle {
    configFile = file("${project.rootDir}/conf/checkstyle.xml")
    toolVersion = '7.7'
    showViolations = false
}

jar {
    manifest {
        attributes 'Main-Class': 'org.loklak.LoklakServer'
    }
}

shadowJar {
    mergeServiceFiles()

    from('conf') {
        into 'conf'
    }

    from('html') {
        into 'html'
    }

    from('installation') {
        into 'installation'
    }

    from('ssi') {
        into 'ssi'
    }
}
assemble.dependsOn shadowJar

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.antlr', name: 'antlr-runtime', version: '3.5'
    compile group: 'org.ow2.asm', name: 'asm', version: '4.1'
    compile group: 'org.ow2.asm', name: 'asm-commons', version: '4.1'
    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.54'
    compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.54'
    compile group: 'com.robbypond', name: 'boilerpipe', version: '1.2.3'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
    compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.8.13'
    compile group: 'com.ning', name: 'compress-lzf', version: '1.0.2'
    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.4.0'
    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.4'
    compile group: 'com.google.guava', name: 'guava', version: '18.0'
    compile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    compile group: 'org.hdrhistogram', name: 'HdrHistogram', version: '2.1.6'
    compile group: 'com.carrotsearch', name: 'hppc', version: '0.7.1'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.8'
    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.1'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.8.1'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-smile', version: '2.8.1'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.8.1'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    compile group: 'net.sf.jcommon', name: 'jcommon', version: '1.0.1'
    compile group: 'org.jdom', name: 'jdom', version: '1.1.3'
    compile group: 'org.eclipse.jetty', name: 'jetty-http', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-io', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-rewrite', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-security', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.3.11.v20160721'
    compile group: 'org.eclipse.jetty', name: 'jetty-eventsource-servlet', version: '1.0.0'
    compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
    compile group: 'net.java.dev.jna', name: 'jna', version: '4.1.0'
    compile group: 'org.joda', name: 'joda-convert', version: '1.2'
    compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
    compile group: 'com.github.fge', name: 'json-schema-validator', version: '2.2.6'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
    compile group: 'com.twitter', name: 'jsr166e', version: '1.1.0'
    compile group: 'com.vividsolutions', name: 'jts', version: '1.13'
    compile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.6.2'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.2'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.2'
    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.6.2'
    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-backward-codecs', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-grouping', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-highlighter', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-join', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-memory', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-misc', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-queries', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-sandbox', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-spatial', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-spatial3d', version: '5.5.2'
    compile group: 'org.apache.lucene', name: 'lucene-suggest', version: '5.5.2'
    compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.17'
    compile group: 'io.netty', name: 'netty', version: '3.10.6.Final'
    compile group: 'rome', name: 'rome', version: '1.0'
    compile group: 'org.elasticsearch', name: 'securesm', version: '1.0'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
    compile group: 'org.yaml', name: 'snakeyaml', version: '1.15'
    compile group: 'com.spatial4j', name: 'spatial4j', version: '0.5'
    compile group: 'com.tdunning', name: 't-digest', version: '3.0'
    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.2'
    compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.2'
    compile group: 'xerces', name: 'xerces', version: '2.4.0'
    compile group: 'org.unbescape', name: 'unbescape', version: '1.0'
    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.+'
}

tasks.withType(Javadoc) {
    options.addBooleanOption('Xdoclint:none', true)
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

task setup(type: JavaExec, dependsOn: classes) {
    main = 'org.loklak.LoklakInstallation'
    classpath sourceSets.main.runtimeClasspath
    classpath configurations.runtime
}

task start(type: JavaExec, dependsOn: classes) {
    main = 'org.loklak.LoklakServer'
    classpath sourceSets.main.runtimeClasspath
    classpath configurations.runtime
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}
check.dependsOn jacocoTestReport

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean
